<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.SumiShisen.Card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="64dp"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_settings"
            android:textColor="@color/md_theme_onSurface"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_privacy"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_privacy"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/iv_privacy_link"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/text_privacy_link"
                android:src="@drawable/ic_open_link"
                app:tint="@color/md_theme_onSurface" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_show_screen"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_privacy">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_show_screen"
                android:textSize="24sp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_show_screen"
                style="@style/Theme.SumiShisen.Switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_version"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_version"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="24sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/Theme.SumiShisen.Button.Function"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>