<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.SumiShisen.Card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/ll_bottom"
            app:layout_constraintEnd_toStartOf="@id/ll_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mini_game"
                style="@style/Theme.SumiShisen.Button.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/text_mini_game" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_egg"
                style="@style/Theme.SumiShisen.Button.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/text_egg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ll_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_top">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_fries"
                style="@style/Theme.SumiShisen.Button.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/text_fries" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_croquettes"
                style="@style/Theme.SumiShisen.Button.Large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:text="@string/text_croquettes" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_top"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_settings"
                style="@style/Theme.SumiShisen.Button.Input"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_settings"
                android:contentDescription="@string/text_settings" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>